# yushi

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package.json
.github/workflows/: deno.yml  publish.yml  rust.yml
src/: App.tsx  README.md  commands.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddTaskModal.tsx  HistoryModal.tsx  Layout.tsx  SettingsModal.tsx  Sidebar.tsx  TaskItem.tsx  UpdateModal.tsx
src/utils/: format.ts
yushi-cli/: Cargo.toml
yushi-cli/src/: cli.rs  config.rs  main.rs  ui.rs
yushi-cli/src/commands/: config.rs  download.rs  mod.rs  queue.rs
yushi-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
yushi-core/: Cargo.toml
yushi-core/examples/: README.md  download_queue.rs
yushi-core/src/: downloader.rs  error.rs  lib.rs  queue.rs  state.rs  types.rs  utils.rs
