[workspace]
resolver = "3"
members = ["src-tauri", "yushi-core"]

[workspace.package]
authors = ["tangxiangong <tangxiangong@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
fs-err = { version = "3.2", features = ["debug_tokio", "tokio"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
