[package]
name = "yushi-tauri"
authors.workspace = true
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "yushi_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true }
yushi-core = { path = "../yushi-core" }
