[package]
name = "yushi-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
crossterm = { version = "0.29", optional = true }
dirs = "6"
humantime = "2.3"
indicatif = "0.18"
ratatui = { version = "0.30", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
yushi-core = { workspace = true }

[features]
tui = ["dep:crossterm", "dep:ratatui"]

[[bin]]
name = "yushi"
path = "src/main.rs"
